--- a/config.json
+++ b/config.json
@@ -21,10 +21,10 @@
         "😾",
         "🤬"
     ],
-    "BOTNAME": "😘Sujoner jano🌺",
+    "BOTNAME": "😘Shuvor janu🌺",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100089660775474",
+        "100025645342388",
         "",
         ""
     ],
