--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.567Z",
-        "lastAccessed": "2025-09-23T14:07:17.568Z"
+        "creation": "2025-09-24T00:29:16.100Z",
+        "lastAccessed": "2025-09-24T00:29:16.102Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.568Z",
-        "lastAccessed": "2025-09-23T14:07:17.568Z"
+        "creation": "2025-09-24T00:29:16.102Z",
+        "lastAccessed": "2025-09-24T00:29:16.102Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.568Z",
-        "lastAccessed": "2025-09-23T14:07:17.568Z"
+        "creation": "2025-09-24T00:29:16.102Z",
+        "lastAccessed": "2025-09-24T00:29:16.102Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.568Z",
-        "lastAccessed": "2025-09-23T14:07:17.568Z"
+        "creation": "2025-09-24T00:29:16.102Z",
+        "lastAccessed": "2025-09-24T00:29:16.102Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.568Z",
-        "lastAccessed": "2025-09-23T14:07:17.568Z"
+        "creation": "2025-09-24T00:29:16.102Z",
+        "lastAccessed": "2025-09-24T00:29:16.102Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.568Z",
-        "lastAccessed": "2025-09-23T14:07:17.568Z"
+        "creation": "2025-09-24T00:29:16.102Z",
+        "lastAccessed": "2025-09-24T00:29:16.102Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.568Z",
-        "lastAccessed": "2025-09-23T14:07:17.568Z"
+        "creation": "2025-09-24T00:29:16.102Z",
+        "lastAccessed": "2025-09-24T00:29:16.102Z"
     },
     {
         "key": "pas",
@@ -68,26 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.568Z",
-        "lastAccessed": "2025-09-23T14:07:17.568Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.2625000476837158",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.568Z",
-        "lastAccessed": "2025-09-23T14:07:17.568Z"
-    },
-    {
-        "key": "wd",
-        "value": "571x1268",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.569Z",
-        "lastAccessed": "2025-09-23T14:07:17.569Z"
+        "creation": "2025-09-24T00:29:16.102Z",
+        "lastAccessed": "2025-09-24T00:29:16.102Z"
     },
     {
         "key": "c_user",
@@ -95,17 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.569Z",
-        "lastAccessed": "2025-09-23T14:07:17.569Z"
-    },
-    {
-        "key": "fr",
-        "value": "0r4d31R5Fiz98QrGD.AWdMVhpASzBna1xJ6PiM6WCiVG4it6lcNIExslT160b2CpjZ6FI.BoxDj7..AAA.0.0.Bo0qk7.AWd7v0sMxBjdHOqFvDOsSEhkW4E",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.569Z",
-        "lastAccessed": "2025-09-23T14:07:17.569Z"
+        "creation": "2025-09-24T00:29:16.102Z",
+        "lastAccessed": "2025-09-24T00:29:16.103Z"
     },
     {
         "key": "xs",
@@ -113,25 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.569Z",
-        "lastAccessed": "2025-09-23T14:07:17.569Z"
+        "creation": "2025-09-24T00:29:16.103Z",
+        "lastAccessed": "2025-09-24T00:29:16.103Z"
+    },
+    {
+        "key": "fr",
+        "value": "0r4d31R5Fiz98QrGD.AWf1T5XmSD4EhrGEINA6Hkj6Giks_NDyXkQHj46LX5nzIgZcrww.BoxDj7..AAA.0.0.Bo0zp8.AWfJ16FCdpGzTqKP7RCDL8Oq2w0",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-24T00:29:16.103Z",
+        "lastAccessed": "2025-09-24T00:29:16.103Z"
     },
     {
         "key": "fbl_st",
-        "value": "101720616%3BT%3A29310605",
+        "value": "101736678%3BT%3A29311225",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.569Z",
-        "lastAccessed": "2025-09-23T14:07:17.569Z"
+        "creation": "2025-09-24T00:29:16.103Z",
+        "lastAccessed": "2025-09-24T00:29:16.103Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2931%3Btimestamp%3A1758636352",
+        "value": "v2%3Bclient_version%3A2933%3Btimestamp%3A1758673532",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-23T14:07:17.569Z",
-        "lastAccessed": "2025-09-23T14:07:17.569Z"
+        "creation": "2025-09-24T00:29:16.103Z",
+        "lastAccessed": "2025-09-24T00:29:16.103Z"
     }
 ]
