--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.100Z",
-        "lastAccessed": "2025-09-24T00:29:16.102Z"
+        "creation": "2025-09-24T10:07:45.226Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.102Z",
-        "lastAccessed": "2025-09-24T00:29:16.102Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.102Z",
-        "lastAccessed": "2025-09-24T00:29:16.102Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.102Z",
-        "lastAccessed": "2025-09-24T00:29:16.102Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.102Z",
-        "lastAccessed": "2025-09-24T00:29:16.102Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.102Z",
-        "lastAccessed": "2025-09-24T00:29:16.102Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.102Z",
-        "lastAccessed": "2025-09-24T00:29:16.102Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.102Z",
-        "lastAccessed": "2025-09-24T00:29:16.102Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "c_user",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.102Z",
-        "lastAccessed": "2025-09-24T00:29:16.103Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "xs",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.103Z",
-        "lastAccessed": "2025-09-24T00:29:16.103Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "fr",
-        "value": "0r4d31R5Fiz98QrGD.AWf1T5XmSD4EhrGEINA6Hkj6Giks_NDyXkQHj46LX5nzIgZcrww.BoxDj7..AAA.0.0.Bo0zp8.AWfJ16FCdpGzTqKP7RCDL8Oq2w0",
+        "value": "0r4d31R5Fiz98QrGD.AWf4zSBu4bms4rRHVAOEK6fAeabT0QYMQN4YwKdrU5s7RJKB7mQ.BoxDj7..AAA.0.0.Bo070F.AWe7msWwdH5FeenMMGr2l9wS8pQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.103Z",
-        "lastAccessed": "2025-09-24T00:29:16.103Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "fbl_st",
-        "value": "101736678%3BT%3A29311225",
+        "value": "100419107%3BT%3A29311782",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.103Z",
-        "lastAccessed": "2025-09-24T00:29:16.103Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2933%3Btimestamp%3A1758673532",
+        "value": "v2%3Bclient_version%3A2933%3Btimestamp%3A1758706950",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T00:29:16.103Z",
-        "lastAccessed": "2025-09-24T00:29:16.103Z"
+        "creation": "2025-09-24T10:07:45.228Z",
+        "lastAccessed": "2025-09-24T10:07:45.228Z"
     }
 ]
