--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.226Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.694Z",
+        "lastAccessed": "2025-09-24T10:14:35.699Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.699Z",
+        "lastAccessed": "2025-09-24T10:14:35.699Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.699Z",
+        "lastAccessed": "2025-09-24T10:14:35.699Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.699Z",
+        "lastAccessed": "2025-09-24T10:14:35.700Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.700Z",
+        "lastAccessed": "2025-09-24T10:14:35.700Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.700Z",
+        "lastAccessed": "2025-09-24T10:14:35.700Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.700Z",
+        "lastAccessed": "2025-09-24T10:14:35.700Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.700Z",
+        "lastAccessed": "2025-09-24T10:14:35.700Z"
     },
     {
         "key": "c_user",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.700Z",
+        "lastAccessed": "2025-09-24T10:14:35.700Z"
     },
     {
         "key": "xs",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.700Z",
+        "lastAccessed": "2025-09-24T10:14:35.700Z"
     },
     {
         "key": "fr",
-        "value": "0r4d31R5Fiz98QrGD.AWf4zSBu4bms4rRHVAOEK6fAeabT0QYMQN4YwKdrU5s7RJKB7mQ.BoxDj7..AAA.0.0.Bo070F.AWe7msWwdH5FeenMMGr2l9wS8pQ",
+        "value": "0r4d31R5Fiz98QrGD.AWdQR36sm0Agh0r87-cJug_At8bfBrNbye8U8gpEk0MMfPeC-9M.BoxDj7..AAA.0.0.Bo08RM.AWceyxvAYlT0fDNNx3lPSJ-HtFE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100419107%3BT%3A29311782",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.700Z",
+        "lastAccessed": "2025-09-24T10:14:35.700Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2933%3Btimestamp%3A1758706950",
+        "value": "v2%3Bclient_version%3A2933%3Btimestamp%3A1758708812",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-24T10:07:45.228Z",
-        "lastAccessed": "2025-09-24T10:07:45.228Z"
+        "creation": "2025-09-24T10:14:35.700Z",
+        "lastAccessed": "2025-09-24T10:14:35.700Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100438836%3BT%3A29311813",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-24T10:14:35.700Z",
+        "lastAccessed": "2025-09-24T10:14:35.700Z"
     }
 ]
